# ROS2-Point-Cloud-Clustering-and-Segmentation-for-Autonomous-Behaviour

./: .gitmodules  README.md
point_cloud_processing/: CMakeLists.txt
point_cloud_processing/launch/: process_kitti.launch.py
point_cloud_processing/src/: 0_table_scene.cpp  2_circular_cloud.cpp  3_filtering_segmentation.cpp
turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
